[package]
name = "isok-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
isok-data = { path = "../isok-data" }
async-trait = "0.1.83"
reqwest = { version = "0.12.9", features = ["json"] }
tokio = { version = "1.42.0", features = ["rt-multi-thread", "macros", "sync", "time", "rt"] }
serde = { version = "1.0.216", features = ["derive"] }
figment = { version = "0.10.19", features = ["yaml"] }
serde_yaml = "0.9.33"
thiserror = "2.0.7"
clap = { version = "^4.5", features = ["derive", "env"] }
tracing = { version = "^0.1" }
tracing-subscriber = { version = "^0.3", features = ["env-filter"] }
dashmap = "6.1.0"
enum_dispatch = { version = "0.3.13" }
futures = "0.3.31"
prost = "0.13.4"

[dev-dependencies]
pretty_assertions = { version = "^1.4" }