[package]
name = "isok-broker"
version = "0.1.0"
edition = "2021"

[dependencies]
isok-data = { path = "../isok-data" }
async-trait = "0.1.83"
surf = "2.3.2"
tokio = { version = "1.42.0", features = ["rt-multi-thread", "macros", "sync", "time"] }
serde = { version = "1.0.216", features = ["derive"] }
figment = { version = "0.10.19", features = ["yaml"] }
serde_yaml = "0.9.33"
thiserror = "2.0.7"
clap = { version = "^4.5", features = ["derive", "env"] }
tracing = { version = "^0.1" }
tracing-subscriber = { version = "^0.3", features = ["env-filter"] }

[dev-dependencies]
pretty_assertions = { version = "^1.4" }