[package]
name = "isok-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.23", features = ["derive", "env", "color"] }
biscuit-auth = { version = "5.0.0" }
zeroize = { version = "1.8.1" }
chrono = { version = "0.4.39" }
shell-words = { version = "1.1.0" }
tempfile = { version = "3.15.0" }
hex = { version = "0.4.3" }
time = { version = "0.3.37" }
