[package]
name = "isok-data"
version = "0.1.0"
edition = "2021"

[dependencies]
prost = "0.13.4"
tonic = "0.12.3"
prost-types = "0.13.4"

[build-dependencies]
prost-types = {  version = "0.13.4", optional = true }
prost = {  version = "0.13.4", optional = true }
prost-build = {  version = "0.13.4", optional = true }
tonic-build = {  version = "0.12.3", optional = true }

[features]
default = ["prost"]
prost = ["dep:prost-types", "dep:prost", "dep:prost-build"]
tonic = ["dep:tonic-build"]