[package]
name = "isok-web-offloader"
description = "An offloader that will expose an API to see live results from isok probe plane"
version = "0.1.0"
edition = "2021"

[dependencies]
isok-data = { path = "../../isok-data" }
isok-broker = { path = "../../isok-broker" }
isok-agent = { path = "../../isok-agent" }
tokio = { version = "1.42.0", features = ["rt-multi-thread", "macros", "sync", "time", "rt", "signal"] }
serde = { version = "1.0.216", features = ["derive"] }
prost = { version = "0.13.4" }
rdkafka = { version = "0.37", features = ["cmake-build"] }
actix = "0.13.0"
actix-web = "4.3.1"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
chrono = "0.4.39"
testcontainers = "0.23.1"
testcontainers-modules = { version = "0.11.4", features = ["kafka"] }